fixed dictionary detection when not on working path on mac; pkg.sh now creates zip for jre14 package